feat(travel-info): add recyclerview of infraction

--- a/app/src/main/res/layout/fragment_travel_info.xml
+++ b/app/src/main/res/layout/fragment_travel_info.xml
@@ -68,8 +68,9 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:gravity="bottom"
                             android:orientation="horizontal">
 
                             <TextView
@@ -191,17 +192,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnPreviousVideo"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="4dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/arrow_back" />
 
                 <androidx.media3.ui.PlayerView
                     android:id="@+id/playerView"
                     android:layout_width="0dp"
                     android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="4" />
+                    android:layout_weight="1"
+                     />
+
+                <ImageButton
+                    android:id="@+id/btnNextVideo"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="4dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/arrow_next" />
 
             </LinearLayout>
+
 
 
             <com.google.android.material.card.MaterialCardView
@@ -236,7 +254,7 @@
                         android:id="@+id/textView31"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
+                        android:layout_marginStart="24dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:text="Paulo Munhoz"
@@ -263,15 +281,14 @@
                         android:id="@+id/textView33"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
                         android:layout_marginTop="36dp"
                         android:layout_marginEnd="8dp"
                         android:text="Risco: Moderado"
                         android:textColor="@color/colorBackground"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/profile_image"
+                        app:layout_constraintStart_toStartOf="@+id/textView31"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -328,6 +345,41 @@
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Infrações por Gravidade"
+                        android:textColor="@color/textColorPrimary"
+                        android:textSize="20sp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/infracoes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/item_infracao" />
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </LinearLayout>
     </ScrollView>
