--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,11 +90,11 @@
         android:padding="0dp"
         android:src="@drawable/ic_icon_notification"
         android:tint="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/chat_bot"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/button3"
+        android:id="@+id/chat_bot"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
