--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -20,7 +20,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/imageButton"
             style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
             android:elevation="0dp"
@@ -43,6 +43,7 @@
         android:id="@+id/inputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
@@ -52,11 +53,11 @@
             android:id="@+id/texto"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
             android:layout_margin="8dp"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:background="@drawable/layout_input"
             android:hint="Mensagem"
+            android:minHeight="48dp"
             android:padding="8dp"
             android:textColorHint="@color/textColorSecondary" />
 
@@ -64,6 +65,7 @@
             android:id="@+id/sent"
             android:layout_width="20dp"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/layout_button_circle"
