--- a/app/src/main/res/layout/card_message_chat.xml
+++ b/app/src/main/res/layout/card_message_chat.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -23,4 +25,17 @@
         android:text="Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/ LOR-əm IP-səm) is a dummy or placeholder text commonly used in graphic design, publishing, and web development. Its purpose is to permit a page layout to be designed, independently of the copy that will subsequently populate it, or to demonstrate various fonts of a typeface without meaningful text that could be distracting."
         android:textColor="@color/colorBackground"
         android:textSize="14sp" />
+
+    <ImageView
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:background="@drawable/layout_dialog"
+        android:backgroundTint="@color/colorPrimary"
+        android:scaleType="centerInside"
+        android:src="@drawable/loading"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+
 </LinearLayout>
