--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <ImageButton
-        android:id="@+id/button2"
+        android:id="@+id/notification"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
