--- a/app/src/main/res/layout/activity_forgotpass_change.xml
+++ b/app/src/main/res/layout/activity_forgotpass_change.xml
@@ -37,44 +37,57 @@
             android:textColor="@color/textColorSecondary" />
 
         <TextView
-            android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Nova senha"
+            android:text="Senha"
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/editTextNewPass"
+            android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_height="56dp"
+            android:layout_margin="4dp"
             android:background="@drawable/layout_input"
-            android:hint="No mínimo 8 caracteres"
-            android:inputType="textPassword"
-            android:maxLength="8"
-            android:padding="16dp" />
+            android:elevation="2dp"
+            android:fontFamily="sans-serif"
+            android:hint="Digite sua senha"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="#000000"
+            android:textColorHint="@color/textColorSecondary"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Confirme a nova senha"
+            android:text="Confirme a senha"
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/editTextConfirmPass"
+            android:id="@+id/confirm_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_height="56dp"
+            android:layout_margin="4dp"
             android:background="@drawable/layout_input"
-            android:hint="Confirme a nova senha"
-            android:inputType="textPassword"
-            android:maxLength="8"
-            android:padding="16dp" />
+            android:elevation="2dp"
+            android:fontFamily="sans-serif"
+            android:hint="Digite novamente a senha"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="#000000"
+            android:textColorHint="@color/textColorSecondary"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/bntChangePass"
