--- a/app/src/main/res/layout/activity_forgpass_input.xml
+++ b/app/src/main/res/layout/activity_forgpass_input.xml
@@ -39,22 +39,31 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Email"
+            android:text="E-mail"
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/editTextEmailPass"
+            android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_height="56dp"
+            android:layout_margin="4dp"
             android:background="@drawable/layout_input"
-            android:inputType="text|textEmailAddress"
-            android:padding="16dp" />
+            android:elevation="2dp"
+            android:fontFamily="sans-serif"
+            android:hint="Digite seu e-mail"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="#000000"
+            android:textColorHint="@color/textColorSecondary"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/bntEnviarCod"
