--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,13 @@
     tools:context=".ui.login.Login">
 
   <ScrollView
+      android:id="@+id/scrollView2"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent">
+      app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,48 +29,77 @@
           android:layout_gravity="center"
           android:layout_marginTop="56dp"
           android:contentDescription="@string/app_name"
-          app:srcCompat="@drawable/logo_eitruck" />
+          app:srcCompat="@drawable/caminhao_logo" />
 
       <TextView
           android:id="@+id/textView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginLeft="4dp"
           android:layout_marginTop="52dp"
           android:fontFamily="@font/texto_inter_regular"
           android:text="Email"
           android:textColor="@color/textColorPrimary" />
 
       <EditText
-          android:id="@+id/editTextEmail"
+          android:id="@+id/email"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="4dp"
+          android:layout_height="56dp"
+          android:layout_margin="4dp"
           android:background="@drawable/layout_input"
-          android:hint="Digite seu email"
-          android:inputType="textEmailAddress"
-          android:padding="16dp" />
+          android:elevation="2dp"
+          android:fontFamily="sans-serif"
+          android:hint="Digite seu e-mail"
+          android:paddingStart="16dp"
+          android:paddingTop="12dp"
+          android:paddingEnd="16dp"
+          android:paddingBottom="12dp"
+          android:textColor="#000000"
+          android:textColorHint="@color/textColorSecondary"
+          android:textSize="16sp" />
+
 
       <TextView
           android:id="@+id/textView2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginLeft="4dp"
           android:layout_marginTop="24dp"
           android:fontFamily="@font/texto_inter_regular"
           android:text="Senha"
           android:textColor="@color/textColorPrimary" />
 
       <EditText
-          android:id="@+id/editTextSenha"
+          android:id="@+id/password"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="4dp"
+          android:layout_height="56dp"
+          android:layout_margin="4dp"
           android:background="@drawable/layout_input"
+          android:elevation="2dp"
+          android:fontFamily="sans-serif"
           android:hint="Digite sua senha"
-          android:inputType="textPassword"
-          android:padding="16dp" />
+          android:paddingStart="16dp"
+          android:paddingTop="12dp"
+          android:paddingEnd="16dp"
+          android:paddingBottom="12dp"
+          android:password="true"
+          android:textColor="#000000"
+          android:textColorHint="@color/textColorSecondary"
+          android:textSize="16sp" />
 
       <TextView
-          android:id="@+id/textViewForgotPass"
+          android:id="@+id/erro"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="4dp"
+          android:layout_marginTop="8dp"
+          android:text="Erro"
+          android:textColor="@color/textColorSecondary"
+          android:visibility="gone"
+          tools:visibility="visible" />
+
+      <TextView
+          android:id="@+id/fogotPaswword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
@@ -90,4 +120,19 @@
 
     </LinearLayout>
   </ScrollView>
+
+  <ProgressBar
+      android:id="@+id/progressBar"
+      style="@style/Widget.AppCompat.ProgressBar"
+      android:layout_width="200dp"
+      android:layout_height="300dp"
+      android:layout_gravity="center"
+      android:indeterminateTint="@color/colorTertiary"
+      android:progressBackgroundTint="@color/colorTertiary"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
