--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.Main">
+    tools:context=".ui.main.Main">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toTopOf="@+id/header" />
 
     <TextView
-        android:id="@+id/nomeUsuário"
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
