feat: add requisition of user

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/foto_perfil"
+        android:src="@drawable/no_profile"
         app:layout_constraintBottom_toBottomOf="@+id/header"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/header"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/texto_inter_regular"
-        android:text="Marcelo Paschoareli"
+        android:text="Sem login"
         android:textColor="@color/textColorPrimary"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/profile_image"
