--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,14 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/texto_inter_regular"
         android:text="Sem login"
         android:textColor="@color/textColorPrimary"
         android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/notification"
         app:layout_constraintStart_toEndOf="@+id/profile_image"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
