--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -235,7 +235,7 @@
                     android:id="@+id/textView34"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="16dp"
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/titulo_bold_poppins_semibold"
                     android:text="Segurança"
@@ -245,17 +245,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:layout_weight="3"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView10"
-                        android:layout_width="46dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
                         app:srcCompat="@drawable/ic_icon_escudo" />
 
                     <TextView
@@ -270,7 +271,7 @@
                         android:textSize="16sp" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/button_politica_privacidade"
                         android:layout_width="wrap_content"
                         android:layout_height="37sp"
                         android:layout_marginRight="4dp"
@@ -280,6 +281,21 @@
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/bnt_logout"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Sair"
+                app:icon="@drawable/ic_icon_sair" />
+        </LinearLayout>
 
 
     </LinearLayout>
