--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,8 +39,7 @@
                 android:backgroundTint="@android:color/transparent"
                 android:elevation="0dp"
                 android:stateListAnimator="@null"
-                app:icon="@drawable/arrow_back"
-                app:iconTint="#000000" />
+                app:icon="@drawable/arrow_back" />
 
             <TextView
                 android:id="@+id/textView13"
@@ -58,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_icon_settings" />
+                android:src="@drawable/ic_icon_setting" />
 
         </LinearLayout>
 
