--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,9 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.EiTruck" parent="Base.Theme.EiTruck">
-        <!-- Transparent system bars for edge-to-edge. -->
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+    <style name="Theme.EiTruck" parent="Theme.Material3.DayNight.NoActionBar">
+
+        <!-- Barras transparentes -->
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <!-- Ajuste automático claro/escuro -->
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="android:windowLightNavigationBar">?attr/isLightTheme</item>
+
+        <!-- Fonte ainda aplicada -->
+        <item name="android:fontFamily">@font/texto_inter_regular</item>
+        <item name="fontFamily">@font/texto_inter_regular</item>
+
     </style>
+
 </resources>
