--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -321,7 +321,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/bnt_logout"
+                android:id="@+id/btn_logout"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
