--- a/app/src/main/res/layout/activity_restrict_area.xml
+++ b/app/src/main/res/layout/activity_restrict_area.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RestrictArea">
+    tools:context=".ui.restrict.RestrictArea">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
