--- a/app/src/main/res/layout/activity_forgotpass_change.xml
+++ b/app/src/main/res/layout/activity_forgotpass_change.xml
@@ -7,6 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".ui.forgot_password.ForgotpassChange">
 
+    <View
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#32000000"
+        android:clickable="true"
+        android:elevation="98dp"
+        android:focusable="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
+        android:layout_gravity="center"
+        android:elevation="99dp"
+        android:foregroundGravity="center"
+        android:indeterminateTint="@color/colorTertiary"
+        android:progressBackgroundTint="@color/colorTertiary"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,7 +77,7 @@
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_margin="4dp"
@@ -90,6 +121,17 @@
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/erro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="8dp"
+            android:text="Erro inesperado"
+            android:textColor="@color/textColorSecondary"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/bntChangePass"
