--- a/app/src/main/res/layout/activity_forgotpass_code.xml
+++ b/app/src/main/res/layout/activity_forgotpass_code.xml
@@ -30,21 +30,21 @@
             android:textSize="24sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Digite o código enviado para  "
+                android:text="Digite o código enviado nas suas notificações ou para:"
                 android:textColor="@color/textColorSecondary" />
 
             <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
+                android:id="@+id/email"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autoText="false"
                 android:fontFamily="@font/sub_texto_inter_semibold"
@@ -61,8 +61,9 @@
 
             <EditText
                 android:id="@+id/editTextCode1"
-                android:layout_width="85dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@drawable/layout_input"
                 android:fontFamily="@font/titulo_bold_poppins_semibold"
                 android:gravity="center"
@@ -74,9 +75,10 @@
 
             <EditText
                 android:id="@+id/editTextCode2"
-                android:layout_width="85dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/layout_input"
                 android:fontFamily="@font/titulo_bold_poppins_semibold"
                 android:gravity="center"
@@ -88,9 +90,10 @@
 
             <EditText
                 android:id="@+id/editTextCode3"
-                android:layout_width="85dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/layout_input"
                 android:fontFamily="@font/titulo_bold_poppins_semibold"
                 android:gravity="center"
@@ -102,9 +105,10 @@
 
             <EditText
                 android:id="@+id/editTextCode4"
-                android:layout_width="85dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/layout_input"
                 android:fontFamily="@font/titulo_bold_poppins_semibold"
                 android:gravity="center"
