--- a/app/src/main/res/layout/activity_forgpass_input.xml
+++ b/app/src/main/res/layout/activity_forgpass_input.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Por favor, digite seu telefone."
+            android:text="Por favor, digite seu e-mail."
             android:textColor="@color/textColorSecondary"
             android:textSize="16sp" />
 
@@ -75,18 +75,18 @@
             android:layout_marginLeft="4dp"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Telefone"
+            android:text="E-mail"
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/telefone"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_margin="4dp"
             android:background="@drawable/layout_input"
             android:elevation="2dp"
             android:fontFamily="sans-serif"
-            android:hint="+__ ____-____"
+            android:hint="Digite seu e-mail"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
