--- a/app/src/main/res/layout/fragment_travel_info.xml
+++ b/app/src/main/res/layout/fragment_travel_info.xml
@@ -185,7 +185,7 @@
 
                             <TextView
                                 android:id="@+id/segment"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
                                 android:text="Segmento"
